# gitgrade

./: .env.example  .gitignore  README.md  package-lock.json  package.json  render.yaml
apps/web/: middleware.ts  next.config.js  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/auth/: page.tsx
apps/web/lib/: github-app.ts  report-types.ts
datasets/: commitsuite_gitgrade.jsonl  github_user_commits.jsonl  local_user_commits.jsonl  open_source_commits_collected.jsonl  open_source_commits_git.jsonl  open_source_repo_manifest.json  seed_open_source_commits.jsonl  training_combined.jsonl  training_combined_with_local.jsonl  user_history_combined.jsonl
datasets/reviews/: focus_review_queue.jsonl  github_user_review_queue.jsonl  manual_labels.jsonl  review_queue.jsonl  user_history_review_queue.jsonl
reports/: sample-report.json
services/analyzer/: README.md  TRAINING.md  pyproject.toml
services/analyzer/gitgrade_analyzer/: __init__.py  analysis.py  cache.py  dataset.py  feature_engineering.py  git_history.py  github_client.py  ingestion.py  main.py  models.py  review.py  scoring.py  training.py
services/analyzer/gitgrade_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/analyzer/scripts/: _bootstrap.py  build_focus_review_queue.py  build_review_queue.py  collect_from_git_repos.py  collect_from_github_user.py  collect_from_local_repos.py  collect_open_source_data.py  error_report.py  import_commitsuite.py  merge_datasets.py  review_labels.py  train_model.py
supabase/: schema.sql
(+14 files in other folders)
