[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gitgrade-analyzer"
version = "0.1.0"
description = "Rule-based commit quality analyzer for GitGrade."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0,<2.0",
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "scikit-learn>=1.5,<2.0",
  "uvicorn>=0.30,<1.0",
  "posthog>=3.0,<4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
gitgrade_analyzer = ["py.typed"]
